# bento-alephium

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.cli  README.md  docker-compose.yml  prometheus.yml
crates/bento-cli/: Cargo.toml
crates/bento-cli/src/: constants.rs  lib.rs  types.rs
crates/bento-core/: Cargo.toml
crates/bento-core/src/: backfill.rs  db.rs  lib.rs
crates/bento-core/src/api/: error.rs  mod.rs
crates/bento-core/src/api/handler/: block.rs  event.rs  mod.rs  transaction.rs
crates/bento-core/src/api/handler/dto/: block.rs  event.rs  mod.rs  transaction.rs
crates/bento-core/src/client/: block.rs  mod.rs  transaction.rs
crates/bento-core/src/config/: mod.rs
crates/bento-core/src/models/: mod.rs  transaction.rs
crates/bento-core/src/processors/: README.md  block_processor.rs  event_processor.rs  mod.rs  tx_processor.rs
crates/bento-core/src/repository/: block.rs  event.rs  processor_status.rs  transaction.rs
crates/bento-core/src/workers/: fetch.rs  mod.rs  pipeline.rs  stage.rs  worker.rs  worker_v2.rs
crates/bento-server/: Cargo.toml
crates/bento-server/src/: error.rs  lib.rs  metrics.rs
crates/bento-server/src/handler/: block.rs  event.rs  transaction.rs
crates/bento-server/src/handler/dto/: block.rs  event.rs  transaction.rs
crates/bento-trait/: Cargo.toml
crates/bento-trait/src/: lib.rs  processor.rs  stage.rs
crates/bento-types/: Cargo.toml
crates/bento-types/migrations/2025-02-25-084655_create-indexes/: up.sql
crates/bento-types/migrations/2025-03-05-145721_alter_events_primary_key_col/: down.sql  up.sql
crates/bento-types/migrations/2025-03-13-073608_remove_block_txs_relations/: down.sql
crates/bento-types/src/: db.rs  lib.rs  network.rs  processors.rs  schema.rs
crates/bento-types/src/errors/: api.rs
crates/bento-types/src/models/: block.rs  event.rs  mod.rs  transaction.rs
crates/bento-types/src/repository/: block.rs  event.rs  mod.rs  processor_status.rs  transaction.rs
examples/event-indexer/: Cargo.toml
examples/event-indexer/src/: main.rs
examples/lending-indexer/: Cargo.toml  config.example.toml  config.toml  config.yaml
examples/lending-indexer/src/: lib.rs
examples/linx-indexer/: Cargo.toml  config.toml
examples/linx-indexer/migrations/2025-05-14-055240_create_transfers/: down.sql  up.sql
examples/linx-indexer/src/: lib.rs  models.rs  processors.rs  repository.rs  routers.rs  schema.rs
examples/linx-indexer/src/models/: account_transactions.rs  new_account_transactions.rs  transfer.rs
examples/linx-indexer/src/processors/: contract_call_processor.rs  dex_processor.rs  transfer_processor.rs
examples/linx-indexer/src/repository/: account_transactions_repository.rs  pool_repository.rs
examples/linx-indexer/src/routers/: account_transactions_router.rs
migrations/2025-02-25-084655_create-indexes/: down.sql
migrations/2025-03-13-073608_remove_block_txs_relations/: up.sql
src/: backfill.rs  lib.rs  schema.rs  traits.rs  types.rs  worker.rs
src/api/: error.rs  index.rs  mod.rs
src/api/handler/: block.rs  event.rs  transaction.rs
src/api/handler/dto/: block.rs  event.rs  mod.rs  transaction.rs
src/client/: block.rs  mod.rs  transaction.rs
src/config/: mod.rs
src/models/: block.rs  event.rs  mod.rs  transaction.rs
src/processors/: block_processor.rs  default_processor.rs  event_processor.rs  lending_marketplace_processor.rs  mod.rs  tx_processor.rs
src/processors/examples/lending/: lending_marketplace_processor.rs
src/repository/: block.rs  event.rs  mod.rs  processor_status.rs  transaction.rs
src/workers/: fetch.rs  mod.rs  worker_v2.rs
