[package]
name = "bento-cli"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bento-core = { path = "../../crates/bento-core" }
anyhow.workspace = true
clap.workspace = true
dotenv.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
serde_json.workspace = true
