[package]
name = "bento-server"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bento-types = { path = "../../crates/bento-types" }
bento-cli = { path = "../../crates/bento-cli" }
serde_json.workspace = true
serde.workspace = true
axum.workspace = true
tokio.workspace = true
anyhow.workspace = true
diesel.workspace = true
tracing-subscriber.workspace = true
utoipa-swagger-ui.workspace = true
utoipa-axum.workspace = true
utoipa.workspace = true
thiserror.workspace = true
