[package]
name = "bento-trait"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
serde_json.workspace = true
diesel-async.workspace = true
postgres-native-tls.workspace = true
bento-types = { path = "../../crates/bento-types" }
tracing.workspace = true
async-trait.workspace = true
anyhow.workspace = true
