[package]
name = "lending-example"
version = "0.1.0"
edition = "2024"

[dependencies]
bento-core = { path = "../../crates/bento-core" }
bento-cli = { path = "../../crates/bento-cli" }
bento-types = { path = "../../crates/bento-types" }
bento-trait = { path = "../../crates/bento-trait" }
clap.workspace = true
diesel.workspace = true
diesel-async.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
serde.workspace = true
serde_json.workspace = true
bigdecimal.workspace = true
diesel-enum.workspace = true
chrono.workspace = true
async-trait.workspace = true
dotenv.workspace = true
dotenvy.workspace = true
tracing.workspace = true
thiserror.workspace = true
